ecmascript/parser/tests/test262-error-references/fail/75b52e0f57aab958.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/75b52e0f57aab958.js:1:15
  |
1 | "use strict"; ({ v: eval }) = obj
  |               ^^^^^^^^^^^^^

